--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,15 @@ dependencies:
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
+  firebase_core: ^3.8.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  provider: ^6.1.2
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.5.1
+  file_picker: ^8.1.6
+  excel: ^4.0.6
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
