--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   excel: ^4.0.6
   csv: ^6.0.0
   url_launcher: ^6.3.1
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/room.png
+    - assets/predict_price.png
+    - assets/estate_image.png
+    - assets/for_rent.png
+    - assets/for_sale.png
+    - assets/house.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
